--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ $ curl https://adsworthheynoski.github.io/
 <html>
   <head>
     <title>Redirecting...</title>
-    <link rel="canonical" href="https://theorangeone.net" />
+    <link rel="canonical" href="https://bikegreenberlin.live" />
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=https://theorangeone.net" />
+    <meta http-equiv="refresh" content="0; url=https://bikegreenberlin.live" />
   </head>
   <body>
     <p>Redirecting...</p>
